--- a/CentroidAPI_VBnet_PowerFeed/My Project/Resources.resx
+++ b/CentroidAPI_VBnet_PowerFeed/My Project/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="cycle_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cycle_start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="cycle_cancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cycle_cancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cycle_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cycle_start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="PowerFeed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PowerFeed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
